// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Monomer List should render correct with groups 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="css-1fb0lk8"
      >
        <div
          class="css-4weiu8"
        >
          <div
            class="css-1a3tnc1"
          >
            <div
              class="css-zopkao"
              data-monomer-item-id="Phe4SD___(2S)-2-amino-3-{4-[(4S)-2,6-dioxo-1,3-diazinane-4-amido]phenyl}propanoic acid"
              data-testid="Phe4SD___(2S)-2-amino-3-{4-[(4S)-2,6-dioxo-1,3-diazinane-4-amido]phenyl}propanoic acid"
            >
              <span
                class="css-uahybi"
              >
                Phe4SD
              </span>
              <div
                aria-label=""
                class="css-daj1kg"
                data-mui-internal-clone-element="true"
              >
                <svg
                  class="autochain css-1u7bcdc"
                  height="13"
                  viewBox="0 0 13 13"
                  width="13"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    clip-rule="evenodd"
                    d="M10.95.25c1.132 0 2.05.895 2.05 2v8l-.01.204c-.106 1.009-.979 1.796-2.04 1.796H4.784l-.129-.004a2.066 2.066 0 01-1.503-.785l-.074-.102-2.734-4a1.96 1.96 0 01-.08-2.09l.08-.128 2.734-4A2.061 2.061 0 014.655.254L4.784.25h6.166zm-6.166 1c-.32 0-.613.137-.808.357l-.078.1-2.733 4a.956.956 0 000 1.086l2.733 4 .078.1c.195.22.488.357.808.357h6.166c.61 0 1.055-.475 1.055-1v-8c0-.525-.445-1-1.055-1H4.784z"
                    fill="currentColor"
                    fill-rule="evenodd"
                  />
                  <path
                    d="M7.461 5.745h2.494v1H7.46V9.25h-.995V6.745H3.982v-1h2.484V3.25h.995v2.495z"
                    fill="currentColor"
                  />
                </svg>
              </div>
              <div
                aria-label="Toggle favorite"
                class="star "
                role="button"
                tabindex="0"
              >
                ★
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="css-1fb0lk8"
    >
      <div
        class="css-4weiu8"
      >
        <div
          class="css-1a3tnc1"
        >
          <div
            class="css-zopkao"
            data-monomer-item-id="Phe4SD___(2S)-2-amino-3-{4-[(4S)-2,6-dioxo-1,3-diazinane-4-amido]phenyl}propanoic acid"
            data-testid="Phe4SD___(2S)-2-amino-3-{4-[(4S)-2,6-dioxo-1,3-diazinane-4-amido]phenyl}propanoic acid"
          >
            <span
              class="css-uahybi"
            >
              Phe4SD
            </span>
            <div
              aria-label=""
              class="css-daj1kg"
              data-mui-internal-clone-element="true"
            >
              <svg
                class="autochain css-1u7bcdc"
                height="13"
                viewBox="0 0 13 13"
                width="13"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  clip-rule="evenodd"
                  d="M10.95.25c1.132 0 2.05.895 2.05 2v8l-.01.204c-.106 1.009-.979 1.796-2.04 1.796H4.784l-.129-.004a2.066 2.066 0 01-1.503-.785l-.074-.102-2.734-4a1.96 1.96 0 01-.08-2.09l.08-.128 2.734-4A2.061 2.061 0 014.655.254L4.784.25h6.166zm-6.166 1c-.32 0-.613.137-.808.357l-.078.1-2.733 4a.956.956 0 000 1.086l2.733 4 .078.1c.195.22.488.357.808.357h6.166c.61 0 1.055-.475 1.055-1v-8c0-.525-.445-1-1.055-1H4.784z"
                  fill="currentColor"
                  fill-rule="evenodd"
                />
                <path
                  d="M7.461 5.745h2.494v1H7.46V9.25h-.995V6.745H3.982v-1h2.484V3.25h.995v2.495z"
                  fill="currentColor"
                />
              </svg>
            </div>
            <div
              aria-label="Toggle favorite"
              class="star "
              role="button"
              tabindex="0"
            >
              ★
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Monomer List should render correct without groups 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="css-1fb0lk8"
      >
        <div
          class="css-4weiu8"
        >
          <div
            class="css-1a3tnc1"
          >
            <div
              class="css-1g9muag"
              data-monomer-item-id="PEG2___Diethylene Glycol"
              data-testid="PEG2___Diethylene Glycol"
            >
              <span
                class="css-uahybi"
              >
                PEG2
              </span>
              <div
                aria-label=""
                class="css-daj1kg"
                data-mui-internal-clone-element="true"
              >
                <svg
                  class="autochain css-1u7bcdc"
                  height="13"
                  viewBox="0 0 13 13"
                  width="13"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    clip-rule="evenodd"
                    d="M10.95.25c1.132 0 2.05.895 2.05 2v8l-.01.204c-.106 1.009-.979 1.796-2.04 1.796H4.784l-.129-.004a2.066 2.066 0 01-1.503-.785l-.074-.102-2.734-4a1.96 1.96 0 01-.08-2.09l.08-.128 2.734-4A2.061 2.061 0 014.655.254L4.784.25h6.166zm-6.166 1c-.32 0-.613.137-.808.357l-.078.1-2.733 4a.956.956 0 000 1.086l2.733 4 .078.1c.195.22.488.357.808.357h6.166c.61 0 1.055-.475 1.055-1v-8c0-.525-.445-1-1.055-1H4.784z"
                    fill="currentColor"
                    fill-rule="evenodd"
                  />
                  <path
                    d="M7.461 5.745h2.494v1H7.46V9.25h-.995V6.745H3.982v-1h2.484V3.25h.995v2.495z"
                    fill="currentColor"
                  />
                </svg>
              </div>
              <div
                aria-label="Toggle favorite"
                class="star "
                role="button"
                tabindex="0"
              >
                ★
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="css-1fb0lk8"
    >
      <div
        class="css-4weiu8"
      >
        <div
          class="css-1a3tnc1"
        >
          <div
            class="css-1g9muag"
            data-monomer-item-id="PEG2___Diethylene Glycol"
            data-testid="PEG2___Diethylene Glycol"
          >
            <span
              class="css-uahybi"
            >
              PEG2
            </span>
            <div
              aria-label=""
              class="css-daj1kg"
              data-mui-internal-clone-element="true"
            >
              <svg
                class="autochain css-1u7bcdc"
                height="13"
                viewBox="0 0 13 13"
                width="13"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  clip-rule="evenodd"
                  d="M10.95.25c1.132 0 2.05.895 2.05 2v8l-.01.204c-.106 1.009-.979 1.796-2.04 1.796H4.784l-.129-.004a2.066 2.066 0 01-1.503-.785l-.074-.102-2.734-4a1.96 1.96 0 01-.08-2.09l.08-.128 2.734-4A2.061 2.061 0 014.655.254L4.784.25h6.166zm-6.166 1c-.32 0-.613.137-.808.357l-.078.1-2.733 4a.956.956 0 000 1.086l2.733 4 .078.1c.195.22.488.357.808.357h6.166c.61 0 1.055-.475 1.055-1v-8c0-.525-.445-1-1.055-1H4.784z"
                  fill="currentColor"
                  fill-rule="evenodd"
                />
                <path
                  d="M7.461 5.745h2.494v1H7.46V9.25h-.995V6.745H3.982v-1h2.484V3.25h.995v2.495z"
                  fill="currentColor"
                />
              </svg>
            </div>
            <div
              aria-label="Toggle favorite"
              class="star "
              role="button"
              tabindex="0"
            >
              ★
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
